feat: Add FIR image data, ML models documentation

--- a/notebooks/training.ipynb
+++ b/notebooks/training.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# End-to-End Urdu OCR Training Walkthrough\n",
+    "# OCR Training Walkthrough\n",
     "\n",
     "This notebook demonstrates the process of preparing the dataset, converting it to LMDB format, and training the UTRNet model.\n",
     "\n",
