feat: Add Naive Bayes spell correction, hybrid pipeline, and KNN evaluation notebooks, introduce `spell_checkers.py`, and update core utilities and dependencies.

--- a/notebooks/training.ipynb
+++ b/notebooks/training.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,9 +51,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converting data from /Users/husnainkhurshid/Projects/ML/data/IIITH/images to LMDB at /Users/husnainkhurshid/Projects/ML/data/IIITH_lmdb...\n",
+      "Created dataset with 1587 samples\n"
+     ]
+    }
+   ],
    "source": [
     "# Configuration for data conversion\n",
     "input_path = os.path.join(project_root, 'data', 'IIITH', 'images')\n",
@@ -81,9 +90,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded 181 characters.\n"
+     ]
+    }
+   ],
    "source": [
     "class Opt:\n",
     "    def __init__(self):\n",
@@ -151,9 +168,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using device: cpu\n",
+      "An error occurred during training: /Users/husnainkhurshid/Projects/ML/data/UPTI/data_valid/test: No such file or directory\n"
+     ]
+    }
+   ],
    "source": [
     "# Set device\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
@@ -179,7 +205,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -193,7 +219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
