refactor: consolidate hybrid pipeline notebooks, remove project README, and update KNN evaluation notebook.

--- a/notebooks/KNN_Evaluation.ipynb
+++ b/notebooks/KNN_Evaluation.ipynb
@@ -13,9 +13,18 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 11,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Initializing KNNCorrector...\n",
+                        "Vocab Size: 154781\n"
+                    ]
+                }
+            ],
             "source": [
                 "import sys\n",
                 "import os\n",
@@ -45,9 +54,17 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 12,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Generated 500 test pairs.\n"
+                    ]
+                }
+            ],
             "source": [
                 "def generate_typo(word):\n",
                 "    if len(word) < 2: return word\n",
@@ -77,9 +94,20 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 13,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Running Evaluation...\n",
+                        "\n",
+                        "Accuracy: 60.20%\n",
+                        "Average Time: 129.75ms\n"
+                    ]
+                }
+            ],
             "source": [
                 "correct_count = 0\n",
                 "start_time = time.time()\n",
@@ -109,9 +137,27 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 14,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Typo -> Truth | Prediction\n",
+                        "چمر_گر -> چمر_رگ | زر_گر\n",
+                        "پامدری -> پامردی | پادری\n",
+                        "چنڈر -> چنڈور | نڈر\n",
+                        "ناموسم -> ناموسوم | ناموس\n",
+                        "رسیو -> برسیو | رسی\n",
+                        "پیشیل -> پیشین | پیشی\n",
+                        "گچنی -> چگنی | چنی\n",
+                        "راجھ -> راجچھ | راج\n",
+                        "نشرتی -> نشریت | شرتی\n",
+                        "کھیڑجا -> کھیجڑا | کھیڑا\n"
+                    ]
+                }
+            ],
             "source": [
                 "print(\"Typo -> Truth | Prediction\")\n",
                 "for typo, truth, pred in failed_cases[:10]:\n",
