chore:Removed dashboard theme error

--- a/notebooks/Hybrid_Pipeline.ipynb
+++ b/notebooks/Hybrid_Pipeline.ipynb
@@ -204,13 +204,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating training data for LR model...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Generating training data for LR model...\n",
       "Training Data: 10000 samples. Positives: 880\n"
      ]
     }
@@ -373,17 +367,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Evaluating on 500 unseen test words...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Evaluating on 500 unseen test words...\n",
       "\n",
       "Hybrid Pipeline Accuracy: 69.40%\n",
-      "Time taken: 50.06s\n",
-      "Average latency: 100.12ms\n"
+      "Time taken: 49.84s\n",
+      "Average latency: 99.68ms\n"
      ]
     }
    ],
@@ -415,7 +403,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
